statum-macros/tests/ui/invalid_machine_generic_not_first.stderr
error: Error: machine `BadMachine` declares unsupported generics `< T, FooState >`.
       Statum requires exactly one generic, and it must name the `#[state]` enum `FooState`.
       Found first generic `T` and additional generics `FooState`.
       Fix: rewrite this as `struct BadMachine<FooState> { ... }` and move other generic data into fields or payload types.
  --> tests/ui/invalid_machine_generic_not_first.rs:18:18
   |
18 | struct BadMachine<T, FooState> {
   |                  ^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_generic_not_first.rs:20:2
   |
20 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_generic_not_first.rs`
